----------------------------------------------------------------------
 OmegaT 2.7.0
----------------------------------------------------------------------
   6 Enhancements
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.7.0 vs. 2.6.3

  Implemented requests:

  - Have glossary search in Find dialog
  http://sourceforge.net/support/tracker.php?aid=3385415

  - Grey out more options with Search Files
  http://sourceforge.net/support/tracker.php?aid=3385348

  - Put "Search files" option at top of Search window
  http://sourceforge.net/support/tracker.php?aid=2610166

  - Adding content (e.g., glossaries) search options
  http://sourceforge.net/support/tracker.php?aid=1587706

  - Go to Next **Translated** Segment
  http://sourceforge.net/support/tracker.php?aid=3181098

  - Do not remove leading and trailing spaces
  http://sourceforge.net/support/tracker.php?aid=3608611

  Bug fixes:

  - XLIFF Filter: <ept> not recognized in relation with <bpt>
  http://sourceforge.net/support/tracker.php?aid=1988732

----------------------------------------------------------------------
 OmegaT 2.6.3 update 1
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.6.3 update 1 vs. 2.6.3

  Bug fixes:

  - When an XML document (e.g., DocBook), contained both internal and 
external entities, the target files could be empty

----------------------------------------------------------------------
 OmegaT 2.6.3
----------------------------------------------------------------------
   3 Enhancements
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.6.3 vs. 2.6.2

  Implemented requests:

  - Import from exported script files
  http://sourceforge.net/support/tracker.php?aid=2957819
